[Fixed] Spacing on the about me section

--- a/css/style.css
+++ b/css/style.css
@@ -566,7 +566,7 @@ ul.social-slide li i.mac{
 /*-- about --*/
 .about{
 	background:#BFBFBF;
-	padding:6em 0;
+	padding:3em 0;
 	text-align:center;
 	}
 .about h4{
